# providers/prod — production providers (io_uring/NVMe/sockets, reactor).
# Placeholder: bodies arrive Phase 7. INTERFACE lib so the tree configures
# cleanly with no sources. NOTE: providers/ is the lint-exempt dir
# (cardinal rule 1).
add_library(lockstep_providers_prod INTERFACE)
# // bodies arrive Phase N
